// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Snapshots ID 1`] = `
<div
  className="sc-dlfnbm dAeYFb"
>
  <input
    className="sc-bdfBwQ itNUpd"
    defaultChecked={false}
    disabled={false}
    id="ID"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-gsTCUz kgSeEo"
    htmlFor="ID"
  >
    RadioButton
  </label>
</div>
`;

exports[`RadioButton Snapshots No children 1`] = `
<div
  className="sc-dlfnbm dAeYFb"
>
  <input
    className="sc-bdfBwQ itNUpd"
    defaultChecked={false}
    disabled={false}
    id="ID"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-gsTCUz kgSeEo"
    htmlFor="ID"
  />
</div>
`;

exports[`RadioButton Snapshots No props 1`] = `
<div
  className="sc-dlfnbm dAeYFb"
>
  <input
    className="sc-bdfBwQ itNUpd"
    defaultChecked={false}
    disabled={false}
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-gsTCUz kgSeEo"
  >
    RadioButton
  </label>
</div>
`;

exports[`RadioButton Snapshots group 1`] = `
<div
  className="sc-dlfnbm dAeYFb"
>
  <input
    className="sc-bdfBwQ itNUpd"
    defaultChecked={false}
    disabled={false}
    id="ID"
    name="ID1"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-gsTCUz kgSeEo"
    htmlFor="ID"
  >
    RadioButton
  </label>
</div>
`;
